# yatodb

./: README.md  index.html  main.js  main.py  pyproject.toml  style.css
config/: dare.json  startup.json  truth.json
utils/: auth.py  ping.py
